
2018-04-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* extras/Makefile.am: compile with -O2 and retry without optimization
	  if first compilation did not work, see Bug #439

2018-03-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am (checkmanual): new target for running manual tests,
	  note: if needed the test runner tests/run_prog_manual.sh may
	  be changed by the user

2018-03-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: check for curses define_key function

2018-03-11  Ron Norman <rjn@inglenet.com>

	* configure.ac: COB_STRFTIME and COB_HAS_UTC_OFFSET removed as
	  no longer needed

2018-02-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* README: Explicitly state we use ranges in copyright years and
	  mention the INSTALL file as suggested by the GNU maintainer manual
	* general: add license notice to Changelog files

2018-01-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: fix setting of COB_CFLAGS when CFLAGS contains
	  -fstack-protector-all or -fstack-protector-strong

2017-12-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: version bump to 3.0-dev
	* general: merged code for REPORTWRITER module from reportwriter branch

2017-12-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: always use non-localized date formatting for tarstamp.h

2017-11-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: tweaked dependencies to make sure defaults.h is
	  even build if another target than all/check is used

2017-11-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: new template COB_COMPUTED_GOTO, defined if
	  computed gotos can be compiled

2017-10-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: if --with-vbisam is given: check for isfullclose
	  (available since 2.0) instead of isopen (available since 1.0)
