@@ -1,4 +1,9 @@
 
+2018-04-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* configure.ac: added --enable-cobc-internal-checks to define
+	  COB_TREE_DEBUG in config.h
+
 2018-04-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* extras/Makefile.am: compile with -O2 and retry without optimization
